--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -1,24 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
-<BorderPane
+<?import javafx.scene.text.TextFlow?>
+<GridPane
   xmlns="http://javafx.com/javafx"
   xmlns:fx="http://javafx.com/fxml"
   fx:controller="edu.cnm.deepdive.codebreaker.controller.MainController"
+  id="grid"
   stylesheets="@../styles/styles.css"
 >
-  <top>
-    <Text fx:id="gameState"/>
-  </top>
+  <columnConstraints>
+    <ColumnConstraints hgrow="ALWAYS" minWidth="10"/>
+    <ColumnConstraints hgrow="NEVER" prefWidth="50"/>
+  </columnConstraints>
 
-  <center>
-    <TextField fx:id="guessInput"/>
-  </center>
+  <rowConstraints>
+    <RowConstraints vgrow="ALWAYS" minHeight="10"/>
+    <RowConstraints vgrow="NEVER" prefHeight="50"/>
+  </rowConstraints>
 
-  <right>
-    <Button fx:id="send" text="Send" onAction="#submitGuess"/>
-  </right>
-</BorderPane>
+  <ScrollPane
+    fx:id="scrollPane"
+    hbarPolicy="NEVER"
+    GridPane.columnIndex="0"
+    GridPane.rowIndex="0"
+    GridPane.columnSpan="2"
+  >
+    <TextFlow id="text-flow">
+      <Text fx:id="gameState"/>
+    </TextFlow>
+  </ScrollPane>
+
+  <TextField
+    fx:id="guessInput"
+    promptText="Enter guess..."
+    GridPane.columnIndex="0"
+    GridPane.rowIndex="1"
+  />
+
+  <Button
+    fx:id="send"
+    onAction="#submitGuess"
+    GridPane.columnIndex="1"
+    GridPane.rowIndex="1"
+  >
+    <graphic>
+      <ImageView
+        fitHeight="24"
+        fitWidth="24"
+        pickOnBounds="true"
+      >
+        <Image url="@../images/send.png"/>
+      </ImageView>
+    </graphic>
+  </Button>
+</GridPane>
