--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -19,12 +19,12 @@
 >
   <columnConstraints>
     <ColumnConstraints hgrow="ALWAYS" minWidth="10"/>
-    <ColumnConstraints hgrow="NEVER" prefWidth="50"/>
+    <ColumnConstraints hgrow="NEVER" minWidth="50"/>
   </columnConstraints>
 
   <rowConstraints>
     <RowConstraints vgrow="ALWAYS" minHeight="10"/>
-    <RowConstraints vgrow="NEVER" prefHeight="50"/>
+    <RowConstraints vgrow="NEVER" minHeight="50"/>
   </rowConstraints>
 
   <ScrollPane
