--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -34,7 +34,7 @@
     GridPane.rowIndex="0"
     GridPane.columnSpan="2"
   >
-    <TextFlow id="text-flow">
+    <TextFlow fx:id="textFlow">
       <Text fx:id="gameState"/>
     </TextFlow>
   </ScrollPane>
