--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -17,12 +17,12 @@
   -fx-border-width: 1px;
 }
 
-#text-flow {
+#textFlow {
   -fx-padding: 10px;
 }
 
 #gameState {
-  -fx-fill: #e0e0e0;
+  -fx-fill: #404080;
   -fx-font-family: "Segoe UI", sans-serif;
   -fx-font-size: 14px;
 }
