--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -2,14 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
+<?import javafx.scene.control.Tooltip?>
 <GridPane
   xmlns="http://javafx.com/javafx"
   xmlns:fx="http://javafx.com/fxml"
@@ -39,9 +40,8 @@
     </TextFlow>
   </ScrollPane>
 
-  <TextField
-    fx:id="guessInput"
-    promptText="Enter guess..."
+  <TilePane
+    fx:id="guessPalette"
     GridPane.columnIndex="0"
     GridPane.rowIndex="1"
   />
@@ -52,6 +52,10 @@
     GridPane.columnIndex="1"
     GridPane.rowIndex="1"
   >
+    <tooltip>
+      <Tooltip text="%send_tooltip" />
+    </tooltip>
+
     <graphic>
       <ImageView
         fitHeight="24"
