--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -1,5 +1,5 @@
 .root {
-  -fx-background-color: #2b2b2b;
+  -fx-background-color: #505050;
   -fx-padding: 5px;
 }
 
@@ -54,16 +54,32 @@
   -fx-background-color: #1a8ad4;
 }
 
+TilePane#guessPalette {
+  -fx-max-height: Infinity;
+  -fx-max-width: Infinity;
+  -fx-alignment: center;
+  -fx-tile-alignment: center;
+  -fx-hgap: 16px;
+  -fx-vgap: 16px;
+}
+
 .palette-button {
   -fx-background-color: transparent;
   -fx-border-color: transparent;
   -fx-padding: 0;
   -fx-background-insets: 0;
+  -fx-alignment: center;
 }
 
 .palette-button > Circle {
   -fx-stroke-width: 2;
-  -fx-stroke: black;
+  -fx-stroke: #000000C0;
+  -fx-cursor: hand;
+}
+
+.palette-button > Circle:hover {
+  -fx-stroke-width: 2;
+  -fx-stroke: white;
 }
 
 .palette-button.red-fill > Circle {
