--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -26,6 +26,7 @@
   <rowConstraints>
     <RowConstraints vgrow="ALWAYS" minHeight="10"/>
     <RowConstraints vgrow="NEVER" minHeight="50"/>
+    <RowConstraints vgrow="NEVER" minHeight="32"/>
   </rowConstraints>
 
   <ScrollPane
@@ -43,7 +44,7 @@
   <TilePane
     fx:id="guessPalette"
     GridPane.columnIndex="0"
-    GridPane.rowIndex="1"
+    GridPane.rowIndex="2"
   />
 
   <Button
