--- a/src/main/resources/layouts/main.fxml
+++ b/src/main/resources/layouts/main.fxml
@@ -42,9 +42,9 @@
   </ScrollPane>
 
   <TilePane
-    fx:id="guessPalette"
+    fx:id="guessContainer"
     GridPane.columnIndex="0"
-    GridPane.rowIndex="2"
+    GridPane.rowIndex="1"
   />
 
   <Button
@@ -67,4 +67,10 @@
       </ImageView>
     </graphic>
   </Button>
+
+  <TilePane
+    fx:id="guessPalette"
+    GridPane.columnIndex="0"
+    GridPane.rowIndex="2"
+  />
 </GridPane>
