--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -61,7 +61,7 @@ TilePane#guessPalette {
   -fx-tile-alignment: center;
   -fx-hgap: 16px;
   -fx-vgap: 16px;
-  -fx-padding: 10px;
+  /*-fx-padding: 10px;*/
 }
 
 .palette-button {
@@ -122,8 +122,100 @@ TilePane#guessContainer {
   -fx-padding: 8px;
 }
 
-RadioButton.guess-item {
+#guessContainer .radio-button {
+  -fx-content-display: center;
+  -fx-min-width: 30px;
+  -fx-min-height: 30px;
+  -fx-background-color: transparent;
+  -fx-border-color: transparent;
+  -fx-border-width: 2px;
+  -fx-border-radius: 4px;
+  -fx-background-radius: 4px;
+  -fx-cursor: hand;
 }
 
-.guess-item {
+#guessContainer .radio-button .radio {
+  -fx-min-width: 0;
+  -fx-pref-width: 0;
+  -fx-max-width: 0;
+  -fx-padding: 0;
+  -fx-opacity: 0;
+}
+
+#guessContainer .radio-button .label {
+  -fx-text-fill: #202020;
+  -fx-font-weight: bold;
+  -fx-font-size: 18px;
+}
+
+#guessContainer .radio-button:selected {
+  -fx-border-color: #404040;
+  -fx-background-color: #A0A0A0;
+}
+
+#guessContainer .radio-button .graphic-region {
+  -fx-min-width: 24px;
+  -fx-min-height: 24px;
+}
+
+#guessContainer .radio-button.red-fill .graphic-region {
+  -fx-background-color: red;
+  -fx-shape: "M 0,50
+  a 50,50 0 1,0 100,0
+  a 50,50 0 1,0 -100,0
+  z";
+}
+
+#guessContainer .radio-button.orange-fill .graphic-region {
+  -fx-background-color: orange;
+  -fx-shape: "M 0,50
+  a 50,50 0 1,0 100,0
+  a 50,50 0 1,0 -100,0
+  z";
+}
+
+#guessContainer .radio-button.yellow-fill .graphic-region {
+  -fx-background-color: yellow;
+  -fx-shape: "M 0,50
+  a 50,50 0 1,0 100,0
+  a 50,50 0 1,0 -100,0
+  z";
+}
+
+#guessContainer .radio-button.green-fill .graphic-region {
+  -fx-background-color: green;
+  -fx-shape: "M 0,50
+  l 50,-50
+  l 50,50
+  l -50,50
+  z
+  m 25,0
+  l 25,-25
+  l 25,25
+  l -25,25
+  z";
+}
+
+#guessContainer .radio-button.blue-fill .graphic-region {
+  -fx-background-color: blue;
+  -fx-shape: "M 50,0
+  l 43.301,75
+  l -86.602,0
+  Z";
+}
+
+#guessContainer .radio-button.indigo-fill .graphic-region {
+  -fx-background-color: indigo;
+  -fx-shape: "M 0,50
+  a 50,50 0 1,0 100,0
+  a 50,50 0 1,0 -100,0
+  z";
+}
+
+#guessContainer .radio-button.violet-fill .graphic-region {
+  -fx-background-color: violet;
+  -fx-shape: "M 0,50
+  a 50,50 0 1,0 100,0
+  a 50,50 0 1,0 -100,0
+  z";
 }
