palette and guess working together

--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -48,10 +48,16 @@
   -fx-background-color: #0078d7;
   -fx-background-radius: 3px;
   -fx-cursor: hand;
+  -fx-opacity: 1;
 }
 
 #send:hover {
   -fx-background-color: #1a8ad4;
+}
+
+#send:disabled {
+  -fx-opacity: 0.2;
+
 }
 
 TilePane#guessPalette {
